# oauth3-tee-proxy

./: .env_example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  ONBOARDING.md  README.md  SCRATCHPAD.md  SPEC.md  check_accounts.py  check_user.py  config.py  database.py  debug_settings.py  docker-compose-prod.yml  docker-compose.yml  main.py  migrate_db.py  migrations.py  models.py  oauth2_routes.py  oauth_client_app.py  patches.py  plugin_manager.py  prd.txt  pyproject.toml  pytest.ini  requirements.txt  safety.py  telegram_client.py  telegram_routes.py  test_env.py  test_webauthn.py  twitter_client.py  twitter_oauth.py  twitter_oauth_routes.py  webauthn_routes.py
auth/: __init__.py  jwt_service.py  middleware.py  passkey_service.py
middleware/: __init__.py  auth.py  auth.py.deprecated
plugins/: README.md  __init__.py
plugins/telegram/: __init__.py  auth.py  config.py  models.py  resource.py
plugins/twitter/: README.md  __init__.py  auth.py  config.py  models.py  patches.py  policy.py  resource.py  ui.py
static/css/: components.css  styles.css
static/js/: webauthn-common.js  webauthn-helper.js
templates/: add_telegram.html  authorize.html  base.html  dashboard.html  error.html  graphql_playground.html  home.html  login.html  macros.html  profile.html  register.html  submit_cookie.html  webauthn_login.html  webauthn_register.html
tests/: README.md  conftest.py
tests/auth/: __init__.py  test_jwt_service.py  test_middleware.py  test_passkey_service.py
ui_routes/: __init__.py  api_routes.py  auth_routes.py  dashboard_routes.py  webauthn_routes.py
(+31 files in other folders)
