[project]
name = "oauth3-tee-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "fastapi==0.109.2",
    "httpx==0.24.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.3",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.11.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart==0.0.9",
    "respx==0.20.2",
    "sqlalchemy==2.0.27",
    "telethon==1.29.0",
    "tweepy==4.14.0",
    "twitter-api-client==0.10.9",
    "uvicorn[watchfiles]==0.27.1",
    "webauthn==2.0.0",
]
